# futbin-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
src/futbin_sdk/: __init__.py  cli.py  client.py  models.py  nations.py  tui.py
tests/: test_client.py
