[project]
name = "futbin-sdk"
version = "0.1.0"
description = "Python SDK for FUTBIN API - Unofficial client for FIFA Ultimate Team player prices and statistics"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Daoji", email = "daoji.chang@gmail.com" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["futbin", "fifa", "fc25", "fc26", "ultimate-team", "fut", "sdk", "api"]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
    "fake-useragent>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
cffi = [
    "curl-cffi>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/daojiAnime/futbin-sdk"
Repository = "https://github.com/daojiAnime/futbin-sdk"
Issues = "https://github.com/daojiAnime/futbin-sdk/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/futbin_sdk"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
